--- a/CSS/FREE-RUN-CSS.css
+++ b/CSS/FREE-RUN-CSS.css
@@ -535,7 +535,7 @@ background-position: 9px 9px;
 /*  HOST */
 
 #user-panel:not(.is-none) .user > .icon-chat-host + .name,#user-lists .user > .icon-chat-host + .name,.message.from-host > .from,.emote.from-host > .from,.mention.from-host > .from {
-    color: #ff00e1 !important;
+    color: #ABAB00 !important;
 }
 
 .icon-chat-host,.message.from-host > .icon,.emote.from-host > .icon,.mention.from-host > .icon {
@@ -544,7 +544,7 @@ background-position: 9px 9px;
 }
 
 .icon-chat-host ~ .text > .name,.icon-chat-host ~ .from,.icon-chat-host ~ span {
-    color: #ff00e1 !important;
+    color: #ABAB00 !important;
 }
 
 /*  Manager */
@@ -596,6 +596,6 @@ background-position: 9px 9px;
   background-position: 0px 0px;
 }
 #chat [data-cid^="4665079-"] .bdg {
-  background: url('http://s28.postimg.org/jq06oqo3d/XKubbdm.png') !important;
+  background: url('http://s28.postimg.org/jq06oqo3d/XKubbdm.png') !important
   background-position: 0px 0px;
 }
